--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "gsap": "^3.10.4",
     "leva": "^0.9.29",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
